# stm32g4

./: .gitignore  Cargo.toml  NOTES.md  README.md  build.rs  memory-app.x  memory-bootloader.x
.cargo/: config.toml
docs/: BOOTLOADER_DESIGN.md  FOC_PLAN.md  MIGRATION_PLAN.md  OTA_PROTOCOL.md  PROBLEM_SOLVING.md
docs/fixes/: fix-01-pnb-not-cleared-after-erase.md  fix-02-reset-response-not-sent.md  fix-03-flash-code-deduplication.md
src/: config.rs  flash_raw.rs  lib.rs  shared.rs
src/bootloader/: boot_flag.rs  flash.rs  mod.rs  ota.rs  protocol.rs  uart.rs
src/bsp/: b_g431b_esc1.rs  board.rs  config.rs  mod.rs
src/driver/: adc.rs  comp.rs  mod.rs  opamp.rs  pwm.rs  serial.rs  shell.rs  traits.rs
src/foc/: controller.rs  mod.rs  motor.rs  pi.rs  svpwm.rs  transforms.rs
src/hal/: adc.rs  mod.rs  params.rs  pwm.rs  voltage.rs
src/stm32g4/: adc.rs  mod.rs  opamp.rs  pwm.rs  voltage.rs
tests/: driver_logic.rs
tools/ota-tool/: Cargo.toml
tools/ota-tool/.cargo/: config.toml
tools/ota-tool/src/: main.rs
