[package]
edition = "2024"
name = "embassy-stm32g4-foc"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
embassy-stm32 = {version = "0.6.0", features = ["defmt", "time-driver-any", "stm32g431cb", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-embedded-hal = {version = "0.5.0"}
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { path = "../embassy-futures" }
usbd-hid = "0.9.0"

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io-async = { version = "0.7.0" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.9", default-features = false }
static_cell = "2.0.0"
critical-section = "1.1"

[profile.release]
debug = 2