[package]
edition = "2024"
name = "embassy-stm32g4-foc"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
embassy-stm32 = { version = "0.6.0", features = ["defmt", "time-driver-any", "stm32g431cb", "memory-x", "unstable-pac", "exti"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { path = "../embassy-futures" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-io = "0.7.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.0.0"

# CLI support
embedded-cli = { git = "https://github.com/funbiscuit/embedded-cli-rs", default-features = false, features = ["macros", "history", "autocomplete", "help"] }
ufmt = "0.2.0"

[profile.release]
debug = 2
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"