[package]
edition = "2024"
name = "embassy-stm32g4-foc"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = []
# Bootloader feature - use when building the bootloader binary
bootloader = []
# APP feature - enables all dependencies needed for APP
app = ["embassy-stm32", "embassy-sync", "embassy-executor", "embassy-time", "embassy-futures", "defmt", "defmt-rtt", "panic-probe", "static_cell", "embedded-io", "embedded-cli", "ufmt", "crc"]

[dependencies]
# Core dependencies (required for both bootloader and app)
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"

# APP-only dependencies
embassy-stm32 = { version = "0.6.0", features = ["defmt", "time-driver-any", "stm32g431cb", "unstable-pac", "exti"], optional = true }
embassy-sync = { version = "0.8.0", features = ["defmt"], optional = true }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"], optional = true }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"], optional = true }
embassy-futures = { version = "*", optional = true }

defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
static_cell = { version = "2.0.0", optional = true }
embedded-io = { version = "0.7.1", optional = true }
embedded-cli = { git = "https://github.com/funbiscuit/embedded-cli-rs", default-features = false, features = ["macros", "history", "autocomplete", "help"], optional = true }
ufmt = { version = "0.2.0", optional = true }
crc = { version = "3.2.1", optional = true }

[[bin]]
name = "bootloader"
path = "src/bin/bootloader.rs"
required-features = ["bootloader"]

[[bin]]
name = "embassy-stm32g4-foc"
path = "src/bin/main.rs"
required-features = ["app"]

[profile.release]
debug = 2
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"